[gd_scene load_steps=19 format=3 uid="uid://qtl26pbve3xe"]

[ext_resource type="Script" path="res://elements/Enemies/Melee/melee.gd" id="1_vr3br"]
[ext_resource type="Texture2D" uid="uid://cosmwy01y0f8r" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_idle_anim_f0.png" id="2_6tsm4"]
[ext_resource type="Texture2D" uid="uid://cm8w1r7mnqlj" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_idle_anim_f1.png" id="3_rdee2"]
[ext_resource type="Texture2D" uid="uid://do0x70mgeulwy" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_idle_anim_f2.png" id="4_p4d5b"]
[ext_resource type="Texture2D" uid="uid://cf75ylwluqwjj" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_idle_anim_f3.png" id="5_fsel8"]
[ext_resource type="Texture2D" uid="uid://cq16mt58xtewm" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_run_anim_f0.png" id="6_7ldhi"]
[ext_resource type="Texture2D" uid="uid://3e1jv41sbsl4" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_run_anim_f1.png" id="7_sxxc3"]
[ext_resource type="Texture2D" uid="uid://q1pmm2hc7e88" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_run_anim_f2.png" id="8_0l1f2"]
[ext_resource type="Texture2D" uid="uid://bl01uvhvtf5hy" path="res://Assets/0x72_DungeonTilesetII_v1.7/frames/chort_run_anim_f3.png" id="9_3yyo2"]
[ext_resource type="Texture2D" uid="uid://c22k3xir2x0hk" path="res://Assets/healthbarUnder.png" id="10_80dnr"]
[ext_resource type="Texture2D" uid="uid://cvlhvmirprmpr" path="res://Assets/healthbarProgress.png" id="11_wuid0"]
[ext_resource type="PackedScene" uid="uid://b1vqp2d5xe6l3" path="res://elements/Hurtbox/Hurtbox.tscn" id="12_xjvi1"]
[ext_resource type="PackedScene" uid="uid://bwdlskherr8bu" path="res://elements/Hitbox/hitbox.tscn" id="13_e6xw6"]
[ext_resource type="AudioStream" uid="uid://bi7t7cjthnhhc" path="res://Assets/Audio/SoundEffect/enemy_hit.ogg" id="14_rnysl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8xoaq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6tsm4")
}, {
"duration": 1.0,
"texture": ExtResource("3_rdee2")
}, {
"duration": 1.0,
"texture": ExtResource("4_p4d5b")
}, {
"duration": 1.0,
"texture": ExtResource("5_fsel8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_7ldhi")
}, {
"duration": 1.0,
"texture": ExtResource("7_sxxc3")
}, {
"duration": 1.0,
"texture": ExtResource("8_0l1f2")
}, {
"duration": 1.0,
"texture": ExtResource("9_3yyo2")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tylfu"]
radius = 5.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2u8cg"]
radius = 6.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pdov8"]
radius = 6.0
height = 20.0

[node name="Melee" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 7
script = ExtResource("1_vr3br")
HP = 40
dmg = 6
experience = 8

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_8xoaq")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_tylfu")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -14.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -21.0
nine_patch_stretch = true
texture_under = ExtResource("10_80dnr")
texture_progress = ExtResource("11_wuid0")

[node name="Hurtbox" parent="." instance=ExtResource("12_xjvi1")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_2u8cg")

[node name="Hitbox" parent="." instance=ExtResource("13_e6xw6")]
collision_layer = 2
collision_mask = 2
damage = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_pdov8")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_rnysl")
volume_db = -20.0
bus = &"SFX"

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
